--- a/views/basic/search.ejs
+++ b/views/basic/search.ejs
@@ -1,8 +1,8 @@
 <div id="search">
-    <input class="date" type="date" id="date_from" value="xxx" min="yyy" max="zzz">
-    <input class="time" type="time" id="time_from" value="xxx">
+    <input class="date" type="date" id="date_from">
+    <input class="time" type="time" id="time_from">
      -
-    <input class="date" type="date" id="date_to" value="xxx" min="yyy" max="zzz">
+    <input class="date" type="date" id="date_to">
     <input class="time" type="time" id="time_to">
     <input id="result_from" type="hidden">
     <input id="result_to" type="hidden">
