--- a/views/admin/roi.ejs
+++ b/views/admin/roi.ejs
@@ -18,8 +18,8 @@
         <% })%>
       </div>
       <div class="button">
-        <button type= 'button' id="submit">확인</button><br/>
-        <button type="button" id="cancel">취소</button>
+        <button type= 'button' id="submit">저장</button><br/>
+        <button type="button" id="cancel">리셋</button>
       </div>
     </div>
   </div>
