css and copyright

--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -25,5 +25,13 @@
         <%- include('./setting1') %>
         <%}%>
     </div>
+    <div id = "footer">
+      <div id="copyright">
+        Copyright &copy; 2020 Technonia.
+      </div>
+      <div id="companyInfo">
+        TEL. 000-000-0000 FAX.000-000-0000
+      </div>
+    </div>
   </body>
 </html>
