--- a/views/basic/index.ejs
+++ b/views/basic/index.ejs
@@ -21,6 +21,14 @@
 	    <%- include('./info') %>
 	    <%- include('./chart') %>
 	    <%- include('./cameraImage_window') %>
+      <div id = "footer">
+        <div id="copyright">
+          Copyright &copy; 2020 Technonia.
+        </div>
+        <div id="companyInfo">
+          TEL. 000-000-0000 FAX.000-000-0000
+        </div>
+      </div>
 	</div>
 
     <script type="text/javascript">
