--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -2,6 +2,7 @@ body{
   background-color: #131419;
   padding: 0;
   margin:0;
+  text-align: center;
 }
 
 #header {
@@ -17,6 +18,7 @@ body{
   display: inline-block;
   width: 80%;
   min-width: 1000px;
+  box-shadow: 2px 2px 5px 0.5px rgba(0, 0,0,0.4);
 }
 
 /*roi section*/
@@ -27,7 +29,7 @@ body{
 .roi{
   display: inline-block;
   width: 80%;
-  padding: 25px 23px 20px 23px;
+  padding: 30px;
   border-radius: 0 0 20px 20px;
   border-radius: 5px;
   background-color: #26262c;
@@ -35,22 +37,30 @@ body{
   margin-top: 30px;
   color: white;
   margin-bottom: 30px;
+  box-shadow: 2px 2px 5px 0.5px rgba(0, 0,0,0.4);
 }
-.CameraNumber{
+.title{
   color: white;
   display: block;
   text-align: left;
   font-size: 1.1em;
-  padding-left: 8px;
-  padding-top: 11px;
   font-weight: bold;
+}
+#explain {
+  display: inline-block;
+  color: white;
+  background-color: rgba(74, 189, 158, 0.1);
+  padding: 30px;
+  border: 1px solid rgb(74, 189,158);
+  border-radius: 6px;
+  text-align: left;
 }
 #roiContent {
   vertical-align: top;
   margin-bottom: 10px;
   display: grid;
   grid-template-columns: 2fr 5fr 2fr;
-  padding-top: 30px;
+  gap:20px 0;
 }
 #roiTab{
   display: inline-block;
@@ -59,10 +69,14 @@ body{
   border-radius: 3px;
   text-align: left;
   vertical-align: top;
+  grid-row: 2/2;
+  grid-column: 1/3;
 }
 #roiImage{
   display: inline-block;
   text-align: left;
+  grid-row: 2/2;
+  grid-column: 2/3;
 }
 .eachCamera{
   position: relative;
@@ -78,6 +92,8 @@ body{
   display: inline-block;
   text-align: right;
   align-self: end;
+  grid-row: 2/2;
+  grid-column: 3/3;
 }
 .roiCam{
   display: inline-block;
@@ -88,28 +104,30 @@ body{
   border: 2px solid rgba( 255, 255, 255, 0.3);
   margin-bottom: 16px;
   cursor: pointer;
-  margin-left: 8px;
+  margin-left: 5px;
 }
 
 .clickedCam{
   display: inline-block;
-  color: rgba( 255, 255, 255, 0.8) !important;
+  color: rgba(255, 255, 255, 0.8);
   padding: 1px 15px;
   font-size: 0.8em;
   border-radius: 20px;
-  border: 2px solid rgba( 255, 255, 255, 0.8) !important;
+  border: 2px solid rgba(74, 189, 158, 0.8);
+  background-color: rgba(74, 189, 158, 0.1);
   margin-bottom: 16px;
   cursor: pointer;
-  margin-left: 8px;
+  margin-left: 5px;
 }
 
 .completeCam{
   display: inline-block;
-  color: #4abd9e !important;
+  color: black !important;
   padding: 1px 15px;
   font-size: 0.8em;
   border-radius: 20px;
-  border: 2px solid #4abd9e !important;
+  border: 2px solid rgba(74, 189, 158, 0.1); !important;
+  background-color: rgba(74, 189, 158);
   margin-bottom: 16px;
   cursor: pointer;
   margin-left: 8px;
@@ -149,4 +167,25 @@ body{
     background: black;
     opacity: 0.5;
     filter: alpha(opacity = 50);
+}
+
+
+/*footer*/
+#footer{
+  padding: 20px;
+  margin-bottom: 10px;
+  display: inline-block;
+  width: 80%;
+  min-width: 1000px;
+}
+
+#copyright{
+  float: left;
+  display: inline-block;
+  color: rgba(255,255,255, 0.4);
+}
+#companyInfo{
+  float: right;
+  display: inline-block;
+  color: rgba(255,255,255, 0.4);
 }
