--- a/public/css/chart.css
+++ b/public/css/chart.css
@@ -2,6 +2,7 @@ body{
   background-color: #131419;
   padding: 0;
   margin:0;
+  text-align: center;
 }
 
 #header {
@@ -17,6 +18,7 @@ body{
   display: inline-block;
   width: 80%;
   min-width: 1000px;
+  box-shadow: 2px 2px 5px 0.5px rgba(0, 0,0,0.4);
 }
 
 /*chart*/
@@ -33,6 +35,7 @@ body{
   min-width: 1000px;
   border-radius: 20px;
   margin-bottom: -23px;
+  box-shadow: 2px 2px 5px 0.5px rgba(0, 0,0,0.4);
 }
 .chartTab{
   width: 100%;
@@ -89,4 +92,24 @@ body{
        height: 12px;
        margin-right: 5px;
        border-radius: 25px;
+}
+
+/*footer*/
+#footer{
+  padding: 20px;
+  margin-bottom: 10px;
+  display: inline-block;
+  width: 80%;
+  min-width: 1000px;
+}
+
+#copyright{
+  float: left;
+  display: inline-block;
+  color: rgba(255,255,255, 0.4);
+}
+#companyInfo{
+  float: right;
+  display: inline-block;
+  color: rgba(255,255,255, 0.4);
 }
