--- a/views/basic/index.ejs
+++ b/views/basic/index.ejs
@@ -18,6 +18,7 @@
 	        <img src="./public/images/technonia_logo.png" id="header" style = "width: 150px;"/>
 	      </div>
 	    </div>
+      <%- include('./chart_data') %>
 	    <%- include('./info') %>
 	    <%- include('./chart') %>
 	    <%- include('./cameraImage_window') %>
@@ -30,7 +31,6 @@
         </div>
       </div>
 	</div>
-
     <script type="text/javascript">
       var data3 = [];
       var data4 = [];
