--- a/views/basic/info.ejs
+++ b/views/basic/info.ejs
@@ -17,7 +17,7 @@
   </div>
   <div class="cam_info">
     <div class="cam_wrapper">
-      <p style="font-weight: bold; margin: 17px 0 10px 34px">카메라 정보</p>
+      <p style="font-weight: bold; margin: 17px 0 10px 34px; text-align: left;">카메라 정보</p>
       <div class="table_wrapper">
         <table class="info_table" style="margin: 0 auto" width="95%">
 	          <tr class="table_row">
