--- a/public/css/cameraImage_window.css
+++ b/public/css/cameraImage_window.css
@@ -8,15 +8,14 @@ body,div,ul,li,dl,dd,dt,ol,h1,h2,h3,h4,h5,h6,input,fieldset,legend,p,select,tabl
   #cont {
     position: relative;
     background: #26262c;
-    width: 100%;
-	/* padding:20px; */
-	min-width: 1040px;
+    width: 80%;
+	padding:0 20px;
+	min-width: 1000px;
 	margin: 0 auto;
     overflow: hidden;
 	border-radius: 0 0 15px 15px;
-	margin-bottom: 35px;
-	box-shadow: 3px 3px 1px 1px rgba(0, 0,0,0.4);
-	/* z-index: -1; */
+	box-shadow: 2px 2px 5px 0.5px rgba(0, 0,0,0.4);
+	text-align: left;
   }
 
 
@@ -35,7 +34,7 @@ body,div,ul,li,dl,dd,dt,ol,h1,h2,h3,h4,h5,h6,input,fieldset,legend,p,select,tabl
   }
 
   [id *= "row"] img {
-    margin: 0 10px;
+    margin-right: 20px;
     height:170px; width: 270px;
     opacity: 0.85;
   }
@@ -43,11 +42,15 @@ body,div,ul,li,dl,dd,dt,ol,h1,h2,h3,h4,h5,h6,input,fieldset,legend,p,select,tabl
     opacity: 1;
   }
 
+.append {
+	margin-right: 20px;
+    height:170px; width: 270px;
+}
 
 
   .right {
     position: absolute;
-    right:13px; padding-right: 15px;
+    right:30px; padding-right: 15px;
     background: none;
     color: rgba(255, 255, 255, 0.5);
     font-size: 30px;
@@ -56,7 +59,7 @@ body,div,ul,li,dl,dd,dt,ol,h1,h2,h3,h4,h5,h6,input,fieldset,legend,p,select,tabl
   }
   .left {
     position: absolute;
-    left: 24px; padding-left:13px;
+    left: 42px; padding-left:13px;
     background: none;
     color: rgba(255, 255, 255, 0.5);
     font-size: 30px;
@@ -69,7 +72,7 @@ body,div,ul,li,dl,dd,dt,ol,h1,h2,h3,h4,h5,h6,input,fieldset,legend,p,select,tabl
     white-space:nowrap;
     width:90%; height:215px;
     margin: 0 50px 0 55px;
-    padding-bottom: 30px;
+    padding-bottom: 20px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   }
 
@@ -89,10 +92,6 @@ body,div,ul,li,dl,dd,dt,ol,h1,h2,h3,h4,h5,h6,input,fieldset,legend,p,select,tabl
     width: 0;
     height: 0;
   }
-
-
-
-
 
   .img_date p {
     color: rgba(255, 255, 255, 0.6);
@@ -119,14 +118,17 @@ body,div,ul,li,dl,dd,dt,ol,h1,h2,h3,h4,h5,h6,input,fieldset,legend,p,select,tabl
       top:0; right:0;
       color: #ffffff;
       background:#323237;
-      height: 500px;
+      height: 410px;
       width: 285px;
       display: none;
       transition: all ease 0.3s;
 	  font-size: 15px;
     }
+	.info p {
+		display: inline-block;
+	}
+
     .text{
-      overflow: hidden;
       position: relative;
       margin-top: 30px;
     }
@@ -141,8 +143,8 @@ body,div,ul,li,dl,dd,dt,ol,h1,h2,h3,h4,h5,h6,input,fieldset,legend,p,select,tabl
       border-radius: 50px;
       padding: 3px 30px;
       float: right;
-      margin-top: 85px;
-      font-size: 15px;
+      margin-top: 30px;
+      font-size: 14px;
 	  cursor:pointer;
     }
 	.close:hover {
