--- a/public/css/info_window.css
+++ b/public/css/info_window.css
@@ -19,13 +19,14 @@ body,div,ul,li,dl,dd,dt,ol,h1,h2,h3,h4,h5,h6,input,fieldset,legend,p,select,tabl
 	font-size: 15px;
   }
   .site_info {
+	text-align: left;
     background:#1b1b21;
     height: 200px; width:28.5%;
     margin-right:1.5%;
     float:left;
     border-radius: 15px;
     color: white;
-	box-shadow: 3px 3px 1px 1px rgba(0, 0,0,0.4);
+	box-shadow: 2px 2px 5px 0.5px rgba(0, 0,0,0.4);
   }
   .info_row {
     overflow:hidden;
@@ -71,7 +72,7 @@ body,div,ul,li,dl,dd,dt,ol,h1,h2,h3,h4,h5,h6,input,fieldset,legend,p,select,tabl
     float:left;
     border-radius: 15px;
     color: white;
-	box-shadow: 3px 3px 1px 1px rgba(0, 0,0,0.4);
+	box-shadow: 2px 2px 5px 0.5px rgba(0, 0,0,0.4);
   }
   .cam_info th, .cam_info td:not(.last) {
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
@@ -82,7 +83,7 @@ body,div,ul,li,dl,dd,dt,ol,h1,h2,h3,h4,h5,h6,input,fieldset,legend,p,select,tabl
   .table_wrapper {
     overflow-y: scroll;
     white-space: nowrap;
-    width: 95%;
+    width: 95%; height: 147px;
     margin: 0 auto;
   }
   /* scrollbar 속성 변경 */
